feat: initial commit - PUML Viewer app
- Add PlantUML diagram viewer with render functionality
- Support PNG, SVG, and Text format rendering
- Implement preview with zoom functionality for PNG
- Add clipboard paste support
- Add download PNG feature
- Add raw view link to browser
- Implement dark/light theme toggle
- Use React Native Reusables UI components
- Configure Expo Router with TypeScript

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expo-puml-viewer",
-    "slug": "expo-puml-viewer",
+    "name": "PUML Viewer",
+    "slug": "puml-viewer",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -36,6 +36,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "33ab2485-6368-4d19-8a9c-dc913e021fc6"
+      }
+    },
+    "owner": "mewisme"
   }
 }
