--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expo-puml-viewer",
+  "name": "puml-viewer",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@react-navigation/native": "^7.0.0",
+    "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
+    "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
+    "expo-clipboard": "^8.0.7",
+    "expo-file-system": "^19.0.18",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
-    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
     "lucide-react-native": "^0.545.0",
@@ -26,12 +29,13 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-webview": "^13.16.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7"
