--- a/app.json
+++ b/app.json
@@ -2,10 +2,10 @@
   "expo": {
     "name": "PUML Viewer",
     "slug": "puml-viewer",
-    "version": "1.0.0",
+    "version": "0.0.2",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "expo-puml-viewer",
+    "scheme": "pv",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "splash": {
