--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "puml-viewer",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "scripts": {
     "dev": "expo start -c",
     "android": "expo start -c --android",
@@ -10,26 +10,31 @@
     "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
+    "@rn-primitives/switch": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
     "expo-clipboard": "^8.0.7",
+    "expo-constants": "^18.0.10",
     "expo-file-system": "^19.0.18",
     "expo-linking": "~8.0.8",
+    "expo-media-library": "^18.2.0",
     "expo-router": "~6.0.10",
+    "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "~6.0.7",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-qrcode-svg": "^6.3.20",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
