--- a/package.json
+++ b/package.json
@@ -52,5 +52,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.9.2"
   },
+  "license": "MIT",
+  "author": "Mew",
   "private": true
 }
