--- a/package.json
+++ b/package.json
@@ -2,6 +2,23 @@
   "name": "puml-viewer",
   "main": "expo-router/entry",
   "version": "0.0.2",
+  "license": "MIT",
+  "author": "Mew",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mewisme/puml-viewer.git"
+  },
+  "homepage": "https://github.com/mewisme/puml-viewer",
+  "bugs": {
+    "url": "https://github.com/mewisme/puml-viewer/issues"
+  },
+  "keywords": [
+    "puml",
+    "viewer",
+    "plantuml",
+    "diagram",
+    "renderer"
+  ],
   "scripts": {
     "dev": "expo start -c",
     "android": "expo start -c --android",
@@ -51,8 +68,5 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "typescript": "~5.9.2"
-  },
-  "license": "MIT",
-  "author": "Mew",
-  "private": true
+  }
 }
