--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "puml-viewer",
   "main": "expo-router/entry",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "license": "MIT",
   "author": "Mew",
   "repository": {
@@ -31,9 +31,11 @@
     "@react-navigation/native": "^7.0.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
+    "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/separator": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/switch": "^1.2.0",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^54.0.0",
