--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "puml-viewer",
   "main": "expo-router/entry",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "license": "MIT",
   "author": "Mew",
   "repository": {
@@ -41,12 +41,14 @@
     "expo": "^54.0.0",
     "expo-clipboard": "^8.0.7",
     "expo-constants": "^18.0.10",
+    "expo-dev-client": "~6.0.18",
     "expo-file-system": "^19.0.18",
     "expo-linking": "~8.0.8",
     "expo-media-library": "^18.2.0",
     "expo-router": "~6.0.10",
     "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "^29.0.12",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
@@ -59,7 +61,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "^13.15.0",
+    "react-native-worklets": "0.5.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7"
