--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "expo-router": "~6.0.10",
     "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "^6.0.8",
     "expo-updates": "^29.0.12",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
