feat: add environment configurations to eas.json for build types
- Introduced environment settings for development, preview, and production builds in eas.json.
- Enhanced build configuration management for better deployment practices.

--- a/eas.json
+++ b/eas.json
@@ -10,6 +10,7 @@
       "android": {
         "buildType": "apk"
       },
+      "environment": "development",
       "channel": "development"
     },
     "preview": {
@@ -18,6 +19,7 @@
         "buildType": "apk",
         "autoIncrement": true
       },
+      "environment": "preview",
       "channel": "preview"
     },
     "production": {
@@ -26,6 +28,7 @@
         "buildType": "app-bundle",
         "autoIncrement": true
       },
+      "environment": "production",
       "channel": "production"
     }
   }
