feat: implement internationalization and enhance app configuration
- Added i18n support for multiple languages, including English and Vietnamese, to improve user experience.
- Integrated haptic feedback functionality for rendering actions and AI responses.
- Updated app configuration to utilize environment variables for API URLs.
- Enhanced settings screen to allow users to select language and enable/disable haptic feedback.
- Refactored various components to utilize translation functions for dynamic text rendering.
- Added new alert dialog components for improved user interactions.

--- a/eas.json
+++ b/eas.json
@@ -10,15 +10,21 @@
         "buildType": "apk"
       },
       "environment": "development",
+      "env": {
+        "APP_VARIANT": "development"
+      },
       "channel": "development"
     },
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk",
+        "buildType": "app-bundle",
         "autoIncrement": true
       },
       "environment": "preview",
+      "env": {
+        "APP_VARIANT": "preview"
+      },
       "channel": "preview"
     },
     "production": {
@@ -28,6 +34,9 @@
         "autoIncrement": true
       },
       "environment": "production",
+      "env": {
+        "APP_VARIANT": "production"
+      },
       "channel": "production"
     }
   }
