--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "puml-viewer",
   "main": "expo-router/entry",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "license": "MIT",
   "author": "Mew",
   "repository": {
@@ -20,15 +20,17 @@
     "renderer"
   ],
   "scripts": {
-    "dev": "expo start -c",
-    "android": "expo start -c --android",
-    "ios": "expo start -c --ios",
-    "web": "expo start -c --web",
+    "dev": "expo start -c --port 7234",
+    "android": "expo start -c --android --port 7234",
+    "ios": "expo start -c --ios --port 7234",
+    "web": "expo start -c --web --port 7234",
     "clean": "rm -rf .expo node_modules"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.0.0",
+    "@rn-primitives/alert-dialog": "^1.2.0",
+    "@rn-primitives/dialog": "^1.2.0",
     "@rn-primitives/label": "^1.2.0",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/select": "^1.2.0",
@@ -43,19 +45,24 @@
     "expo-constants": "^18.0.10",
     "expo-dev-client": "~6.0.18",
     "expo-file-system": "^19.0.19",
+    "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-localization": "^17.0.7",
     "expo-media-library": "^18.2.0",
     "expo-router": "~6.0.10",
     "expo-sharing": "^14.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "^6.0.8",
     "expo-updates": "^29.0.12",
+    "i18next": "^25.6.3",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-i18next": "^16.3.4",
     "react-native": "0.81.5",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-qrcode-svg": "^6.3.20",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
