--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "expo-dev-client": "~6.0.18",
     "expo-file-system": "^19.0.19",
     "expo-haptics": "~15.0.7",
+    "expo-insights": "~0.10.7",
     "expo-linking": "~8.0.8",
     "expo-localization": "^17.0.7",
     "expo-media-library": "^18.2.0",
